# NJFU-library-cli

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  library.http  new.http  njfulib.json  old.http  scoop.json
.github/workflows/: auto-check-in.yml  auto-reserve.yml  auto_reserve.yml  main.yml  main_testfuncdas.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: action.rs  cli.rs  main.rs  opt.rs
crates/core/: Cargo.toml
crates/core/src/: def.rs  error.rs  lib.rs
crates/core/src/njfulib/: floor.rs  mod.rs  resp.rs  sign_rec.rs  status.rs  user.rs
crates/core/src/utils/: account.rs  config.rs  handle.rs  mod.rs
docs/: crates.js  help.html  search-index.js  settings.html  source-files.js
docs/implementors/core/clone/: trait.Clone.js
docs/implementors/core/convert/: trait.TryFrom.js
docs/implementors/core/fmt/: trait.Debug.js  trait.Display.js
docs/implementors/lazy_static/: trait.LazyStatic.js
docs/implementors/structopt/: trait.StructOpt.js
docs/implementors/strum/: trait.VariantNames.js
docs/njfulib/: all.html  fn.main.html  index.html  sidebar-items.js
docs/njfulib/cli/: enum.Action.html  enum.Day.html  index.html  sidebar-items.js  struct.CommandLineArgs.html  struct.Reserve.html
docs/njfulib/context/: index.html  sidebar-items.js  struct.Context.html
docs/njfulib/core/: fn.handle_action.html  index.html  sidebar-items.js
docs/njfulib/role/: index.html  sidebar-items.js
docs/njfulib/utils/: index.html  sidebar-items.js
docs/src/njfulib/: cli.rs.html  context.rs.html  core.rs.html  main.rs.html
docs/static.files/: ayu-65289d5d067c7c66.css  dark-0e1b889528bd466b.css  light-4743e13df3dfe8c4.css  main-3367e395607fafc1.js  noscript-13285aec31fa243e.css  rustdoc-93196c7a1c3542a8.css  scrape-examples-ef1e698c1d417c0c.js  search-98d53477a794af0b.js  settings-08ddfdda51b8ee2e.css  settings-c3c521c753752a1a.js  source-script-ea63cb6500f71309.js  storage-d43fa987303ecbbb.js
resp/: cancel-ok.json  cancel_fail.txt  center.html  center.json  center_doing.json  center_login.json  center_no_login.json  center_undo.json  in_site_doing.html  in_site_ok.html  in_site_reserve_time_ok.html  in_site_undo.html  leave_fail.json  library.http  login_fail.json  login_ok.json  out_fail.json  out_ok.json  query_floor.json  query_site.json  query_site_null.json  reserve_fail.json  reserve_ok.json
src/: cli.rs  client.rs  config.rs  context.rs  core.rs  def.rs  error.rs  executor.rs  main.rs  process.rs
src/cli/: action.rs  day.rs  infomation.rs  mod.rs  opt.rs  reserve.rs
src/njfulib/: config.rs  dev.rs  floor.rs  mod.rs  resp.rs  resv.rs  resv_info.rs  sign_rec.rs  site.rs  user.rs
src/role/: config.rs  dev.rs  floor.rs  info.rs  login.rs  mod.rs  resp.rs  resv.rs  sign_rec.rs  site.rs  state.rs  student.rs  ts.rs  user.rs
src/utils/: account.rs  def.rs  filter.rs  floor.rs  handle.rs  handle_resp.rs  html.rs  http.rs  json.rs  mod.rs  query.rs  reserve.rs  resp.rs  site.rs  status.rs  student.rs  time.rs
(+100 files in other folders)
