[package]
name = "njfulib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
structopt = "0.3"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking","json","cookies"] }
cookie_store = "0.19.0"
reqwest_cookie_store = "0.5.0"
scraper = "0.16"
tokio = { version = "0.2", features = ["full"] }
log = "0.4"
env_logger = "0.6"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
home = "0.5.4"
