[package]
name = "njfulib"
version = "3.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking","json","cookies"] }
scraper = "0.16"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
home = "0.5.4"
anyhow = "1.0.70"
ferris-says = "0.3.1"
rand = "0.8.5"
indicatif = "0.17.3"
