[package]
name = "njfulib"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5.4"
structopt = "0.3"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["blocking","json","cookies"] }
lazy_static = "1.4"
anyhow = "1"
thiserror = "1"
rand = "0.8.5"
indicatif = "0.17.3"
colored = "2"
