[package]
name = "core"
version = "0.0.0"
edition = "2021"

[dependencies]
home = "0.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["blocking","json","cookies"] }
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4"
anyhow = { version = "1" }
thiserror = "1"
rand = "0.8.5"
indicatif = "0.17.3"
colored = "2"
